--- a/Face_swapper.ipynb
+++ b/Face_swapper.ipynb
@@ -63,7 +63,7 @@
         "output_img = \"./data/output1.png\"  # Nama file output\n",
         "\n",
         "# Menjalankan script\n",
-        "!python swapper.py --source_img {source_img} --target_img {target_img} --output_img {output_img} --background_enhance --face_upsample --upscale=2 --codeformer_fidelity=0.5 --face_restore"
+        "!python swapper.py --source_img {source_img} --target_img {target_img} --output_img {output_img} --background_enhance --face_upsample --upscale=4 --codeformer_fidelity=1"
       ],
       "metadata": {
         "id": "nbRcKpBKAgkf"
